# valhalla-python

./: .gitignore  .windows_env.bat  AUTHORS  CHANGELOG.md  README.md  setup.cfg  setup.cfg.in  setup.py  setup.py.in
.github/workflows/: linux_builds.yml  linux_mac_builds.yml  mingw-build.yml
docs/: build_python_bindings.md
docs/api/turn-by-turn/: api-reference.md
scripts/: build_linux_py_libs.sh  valhalla_build_config
src/baldr/: graphreader.cc
src/bindings/python/: CMakeLists.txt  __init__.py  _actions.py  _actor.py  actor.py  buildtiles.py  config.py  python.cc  setup.cfg  setup.py.in
test/: CMakeLists.txt
test/bindings/python/: test_utrecht.py
