[metadata]
name = valhalla
author = Nils Nolde
author_email = nils@gis-ops.com
description = Python bindings for Valhalla
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gis-ops/valhalla-python
project_urls =
    Bug Tracker = https://github.com/gis-ops/valhalla-python/issues
classifiers =
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
